overflow and width fixed

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -30,6 +30,8 @@ html,
 body,
 #root {
   height: 100%;
+  overflow-x: hidden;
+  width: 100%;
 }
 body {
   margin: 0;
@@ -41,7 +43,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   line-height: 1.45;
   -webkit-font-feature-settings: "ss01" on;
-  overflow-x: hidden;
 }
 
 /* Utility clean container */
